<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activity_sign_in"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
tools:context="com.ecbook.proyectoecbook.proyectoecbook.Inicio_Sesion.RegistActivity"
    android:background="@drawable/background">


<EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:inputType="textPassword"
    android:ems="10"
    android:drawableLeft="@drawable/lock"
    android:id="@+id/txtContraseña"
    android:hint="@string/contr"
    android:textColorHint="#ffffff"
    android:layout_below="@+id/txtEmail"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_alignRight="@+id/txtEmail"
    android:layout_alignEnd="@+id/txtEmail" />

<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="textPersonName"
    android:ems="10"
    android:layout_marginTop="74dp"
    android:id="@+id/txtEmail"
    android:drawableLeft="@drawable/manuser"
    android:hint="@string/email"
    android:textColorHint="#ffffff"
    android:layout_below="@+id/lblRegistrate"
    android:layout_alignParentRight="true"
    android:layout_alignParentEnd="true" />

<TextView
    android:text="@string/registrate"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="28dp"
    android:id="@+id/lblRegistrate"
    android:textSize="34sp"
    android:textColor="@color/abc_primary_text_disable_only_material_dark" />

<Button
    android:text="@string/signIn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="87dp"
    android:id="@+id/btnLogin"
    android:onClick="btnSignin_click"
    android:allowUndo="true"
    android:background="@drawable/background_login_button"
    android:textAllCaps="false"
    android:layout_below="@+id/txtContraseña"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentEnd="true"
    android:textColor="#f16f7d" />

<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/txt_newuser"
    android:hint="Nombre usuario"
    android:drawableLeft="@drawable/user"
    android:textColorHint="#ffffff"
    android:layout_below="@+id/txtContraseña"
    android:layout_alignParentRight="true"
    android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/tvPol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="Al registrarte o iniciar sesión, aceptas nuestros Términos y Condiciones y la Política de Privacidad"
        android:textAlignment="center"
        tools:textColor="@color/common_google_signin_btn_text_dark_default" />
</RelativeLayout>
