<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ecbook.proyectoecbook.proyectoecbook.Inicio_Sesion.LoginActivity"
    android:background="@drawable/backgroundlogo">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/txtContraseña"
        android:drawableLeft="@drawable/lock"
        android:hint="@string/contr"
        android:textColor="#ffffff"
        android:textColorHint="@color/common_plus_signin_btn_text_dark_focused"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtContraseña"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:drawableLeft="@drawable/manuser"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:text="edu@gmail.com"
        android:textColorHint="@color/common_plus_signin_btn_text_dark" />

    <Button
        android:text="@string/logIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnLogin"
        android:onClick="btnLogin_click"

        android:textColor="#f16f7d"
        android:background="@drawable/background_login_button"
        android:textAllCaps="false"
        android:layout_above="@+id/textViewRegistrarse"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="95dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Registrate Aqui!"
        android:id="@+id/textViewRegistrarse"
        android:textColor="#ffffff"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="42dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Recordarme?"
        android:textColor="#fff"
        android:checked="false"
        android:layout_below="@+id/txtContraseña"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>